feat: docs summary page

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.183.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "react-syntax-highlighter": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
